--- a/src/main/resources/public/css/styles.css
+++ b/src/main/resources/public/css/styles.css
@@ -4,7 +4,28 @@
     font-size: 16px;
     text-align: center;
     /* padding-bottom: 15px; */
+    /*color: #fff;
+    background-color: #587593fa;
+    border-color: #6c8eb1;*/
 }
+
+/*.btn-success:hover {
+    color: #fff;
+    background-color: rgba(61, 85, 111, 0.91);
+    border-color: #415d7aa6;
+}
+
+.btn-success:active, .btn-success:focus {
+    color: #fff;
+    background-color: #587593fa;
+    border-color: #6c8eb1;
+}
+
+.btn-success.active.focus, .btn-success.active:focus, .btn-success.active:hover, .btn-success:active.focus, .btn-success:active:focus, .btn-success:active:hover, .open>.dropdown-toggle.btn-success.focus, .open>.dropdown-toggle.btn-success:focus, .open>.dropdown-toggle.btn-success:hover {
+    color: #fff;
+    background-color: #587593fa;
+    border-color: #6c8eb1;
+}*/
 
 .btn-warning {
     width: 40px;
@@ -23,12 +44,12 @@
 
 .panel-default>.panel-heading {
     color: #fff;
-    background-color: #669dd6a6;
+    background-color: #35516e;
     border-color: #ddd;
 }
 
 .panel-heading {
-    padding: 10px 15px;
+    padding: 0;
     border-bottom: 10px solid;
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
@@ -46,3 +67,71 @@
 .container{
     margin-top: 5px;
 }
+
+.headerWidth{
+    width: 100px;
+}
+
+#menuDiv{
+    width: 50px;
+    background-color: #FFF;
+    color: #000;
+}
+
+.dropbtn {
+    height: auto;
+    background-color: #30788e;
+    /*background-color: #35516e;*/
+    color: white;
+    /*padding: 8px;*/
+    font-size: 16px;
+    border: none;
+    padding: 10px 20px 9px 20px;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 200px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    /*background-color: #30788e;*/
+    /*background-color: #35516e;*/
+    background-color: #2c6c81;
+}
+
+/*
+#navigationList a{
+    font: 14px Arial;
+    color: #FFF;
+    text-decoration:none;
+}
+
+#navigationList li{
+    float: left;
+    list-style-type: none;
+    margin-right: 30px;
+    margin-bottom: 10px
+}*/
