--- a/src/main/resources/public/css/styles.css
+++ b/src/main/resources/public/css/styles.css
@@ -58,7 +58,7 @@
 .panel {
     margin-bottom: 20px;
     background-color: #fff;
-    /* border: 15px solid transparent; */
+    border: none;
     border-radius: 4px;
     -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
     box-shadow: 0 1px 1px rgba(0,0,0,.05);
